--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -234,7 +234,7 @@
             </div>
             <div class="col-md-4 col-xl-4 d-flex justify-content-center justify-content-xl-start">
                 <div class="d-flex flex-wrap flex-md-column justify-content-md-start align-items-md-start h-100">
-                    <a href="https://discord.gg/QHC3UE9" target="_blank" rel="external">
+                    <a href="https://instagram.com/samt_siegen" target="_blank" rel="external">
                         <div class="d-flex align-items-center p-3">
                             <div class="bs-icon-md bs-icon-circle bs-icon-primary shadow d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block bs-icon bs-icon-md">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-instagram">
