Fixed impressum and datenschutz

--- a/SAMT-Website/Shared/Footer.razor
+++ b/SAMT-Website/Shared/Footer.razor
@@ -6,8 +6,8 @@
             <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column item">
                 <h3 class="fs-6 fw-bold">Rechtliches</h3>
                 <ul class="list-unstyled">
-                    <li><a href="impressum.html">Impressum</a></li>
-                    <li><a href="datenschutz.html">Datenschutz</a></li>
+                    <li><a href="impressum">Impressum</a></li>
+                    <li><a href="datenschutz">Datenschutz</a></li>
                 </ul>
             </div><!-- End: Services -->
             <!-- Start: About -->
