Changed price to 4 euro

--- a/SAMT-Website/Pages/Pricing.razor
+++ b/SAMT-Website/Pages/Pricing.razor
@@ -1,4 +1,7 @@
 ﻿@page "/pricing"
+@page "/tickets"
+@page "/ticket"
+@page "/preise"
 
 <PageTitle>Preise</PageTitle>
 
@@ -57,7 +60,7 @@
                             <div>
                                 <h3 class="fw-bold text-white mb-0">Armbändchen</h3>
                                 <p>Eintritt für das ganze Jahr</p>
-                                <h4 class="display-4 fw-bold text-white">7 €</h4>
+                                <h4 class="display-4 fw-bold text-white">4 €</h4>
                             </div>
                             <div><span class="badge rounded-pill bg-primary text-uppercase bg-semi-white">Best Value</span></div>
                         </div>
