Moved logo closer to top

--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -16,9 +16,9 @@
 
 <header class="bg-dark">
     <!-- Start: Hero Clean Reverse -->
-    <div class="container pt-4 pt-xl-5">
+    <div class="container pt-4 pt-xl-5" style="margin-top: -48px;">
         <div class="row pt-5">
-            <div class="col-md-8 col-xl-6 text-center text-md-start mx-auto">
+            <div class="col-md-8 col-xl-6 text-center text-md-start mx-auto" style="margin-top: -48px;">
                 <div class="text-center">
                     <img class="img-fluid" src="@samt.ImageLink" width="300" alt="SAMT Logo">
                     <p class="mb-4" style="font-size: 1.6rem;">@samt.Name <br><span class="text-success"><strong>@samt.Date.ToString(CultureInfo.CurrentCulture.DateTimeFormat.LongDatePattern)</strong></span><br> @samt.FkLocation.Name</p>
