Changed page title

--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -12,7 +12,7 @@
     var samt = context.Events.OrderByDescending(x => x.Date).Include(x => x.FkLocation).First();
 }
 
-<PageTitle>Start</PageTitle>
+<PageTitle>SAMT - Siegener Anime und Manga Treff</PageTitle>
 
 <header class="bg-dark">
     <!-- Start: Hero Clean Reverse -->
