--- a/SAMT-Website/Pages/Pricing.razor
+++ b/SAMT-Website/Pages/Pricing.razor
@@ -49,7 +49,7 @@
                                     </span><span>Und alles andere :D</span>
                                 </li>
                             </ul>
-                        </div><button class="btn btn-primary d-block w-100" type="button">Verkauf</button>
+                        </div><button class="btn btn-primary d-block w-100" type="button">Verkauf an Tageskasse</button>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                                     </span><span></span>Ihr seid toll
                                 </li>
                             </ul>
-                        </div><button class="btn btn-primary d-block w-100 bg-semi-white" type="button">Verkauf</button>
+                        </div><button class="btn btn-primary d-block w-100 bg-semi-white" type="button">Verkauf an Tageskasse</button>
                     </div>
                 </div>
             </div>
