--- a/SAMT-Website/Pages/Whenwhere.razor
+++ b/SAMT-Website/Pages/Whenwhere.razor
@@ -49,7 +49,7 @@
                 <div class="col mb-4">
                     <div class="card bg-primary-light">
                         <div class="card-body text-center px-4 py-5 px-md-5">
-                            <i class="material-icons" style="font-size: 50px;">train</i>
+                            <i class="material-icons" style="font-size: 50px;width: auto;height: auto;">train</i>
                             <p class="fw-bold text-primary card-text mb-2">Mit dem Zug</p>
                             <h5 class="fw-bold card-title mb-3">Umweltfreundlich und keine Parkplatzsuche mit dem Zug</h5>
                             <p class="text-muted card-text mb-4">Fahr mit dem Zug bis <strong>Siegen HBF</strong>.<br><br>Vom Bahnhof sind es noch ca. 8 Minuten (650 Meter) zu Fuß bis zur <strong>BlueBox Siegen</strong>.<br></p><a class="btn btn-primary btn-sm" role="button" href="assets/img/Wegbeschreibung_Bahnhof_BlueBox.jpeg" target="_blank">Karte Fußweg</a>
@@ -58,11 +58,11 @@
                 </div>
                 <div class="col mb-4">
                     <div class="card bg-secondary-light">
-                        <div class="card-body text-center px-4 py-5 px-md-5">
-                            <i class="icon ion-android-car" style="font-size: 50px;padding-bottom: 0px;"></i>
-                            <p class="fw-bold text-secondary card-text mb-2">Mit dem Auto</p>
-                            <h5 class="fw-bold card-title mb-3">Schnell und bequem, jedoch leider mit Parkkosten</h5>
-                            <p class="text-muted card-text mb-4">In Siegen gibt es viele Parkmöglichkeiten, die meisten kosten jedoch leider etwas Geld.<br><br><strong>Parken direkt an der BlueBox-Siegen ist aufgrund sehr weniger Parkplätze dem Team, den Austellern und Besuchern mit Handicap vorbehalten!</strong></p><button class="btn btn-secondary btn-sm" type="button">Kommt noch...</button>
+                        <div class="card-body text-center px-4 py-5 px-md-5" style="margin-top: -15px;">
+                            <i class="icon ion-android-car" style="font-size: 50px;"></i>
+                            <p class="fw-bold text-secondary card-text mb-2" style="margin-top: -8px;">Mit dem Auto</p>
+                            <h5 class="fw-bold card-title mb-3">Schnell und bequem, jedoch leider meist mit Parkkosten</h5>
+                            <p class="text-muted card-text mb-4">In Siegen gibt es viele Parkmöglichkeiten, kosten meist jedoch leider etwas Geld.<br><br><strong>Parken direkt an der BlueBox-Siegen ist aufgrund sehr weniger Parkplätze dem Team, den Austellern und Besuchern mit Handicap vorbehalten!</strong><br><br>Wir haben für euch einen Parkplatz-Guide zusammengestellt, mit einer <strong>kostenlosen</strong> und zwei unterschiedlich kostenpflichtigen Parkmöglichkeiten, sowie den Fußweg zum Veranstaltungsort und sonstige Hinweise hinzugefügt.</p><a class="btn btn-secondary btn-sm" role="button" target="_blank" href="https://drive.google.com/file/d/1UHKbGnG9mFTlH4-kFoEzpbSY9b8hDThn/view?usp=sharing">Parkplatz-Guide</a>
                         </div>
                     </div>
                 </div>
