Added more train information

--- a/SAMT-Website/Pages/Whenwhere.razor
+++ b/SAMT-Website/Pages/Whenwhere.razor
@@ -52,7 +52,7 @@
                             <i class="material-icons" style="font-size: 50px;width: auto;height: auto;">train</i>
                             <p class="fw-bold text-primary card-text mb-2">Mit dem Zug</p>
                             <h5 class="fw-bold card-title mb-3">Umweltfreundlich und keine Parkplatzsuche mit dem Zug</h5>
-                            <p class="text-muted card-text mb-4">Fahr mit dem Zug bis <strong>Siegen HBF</strong>.<br><br>Vom Bahnhof sind es noch ca. 8 Minuten (650 Meter) zu Fuß bis zur <strong>BlueBox Siegen</strong>.<br></p><a class="btn btn-primary btn-sm" role="button" href="assets/img/Wegbeschreibung_Bahnhof_BlueBox.jpeg" target="_blank">Karte Fußweg</a>
+                            <p class="text-muted card-text mb-4">Fahr mit dem Zug bis <strong>Siegen HBF</strong>.<br>Nutze hierfür am besten Apps wie z.B. den&nbsp;<a href="https://www.bahn.de/service/mobile/db-navigator" target="_blank">DB Navigator</a>.<br><br><strong>Als kurze Übersicht</strong><br>Aus Richtung Köln: RE 9<br>Aus Richtung Hagen: RE 16/RB 91<br>Aus Richtung Frankfurt: RE 99/IC 222x<br><br>Vom Bahnhof sind es noch ca. 8 Minuten (650 Meter) zu Fuß bis zur <strong>BlueBox Siegen</strong>.<br></p><a class="btn btn-primary btn-sm" role="button" href="assets/img/Wegbeschreibung_Bahnhof_BlueBox.jpeg" target="_blank">Karte Fußweg</a>
                         </div>
                     </div>
                 </div>
