Added more alias to page

--- a/SAMT-Website/Pages/Whenwhere.razor
+++ b/SAMT-Website/Pages/Whenwhere.razor
@@ -1,6 +1,9 @@
 ﻿@page "/whenwhere"
 @page "/when"
 @page "/where"
+@page "/wann"
+@page "/wo"
+@page "/parken"
 
 @using Database.Models
 @using Microsoft.EntityFrameworkCore
