--- a/SAMT-Website/Shared/NavMenu.razor
+++ b/SAMT-Website/Shared/NavMenu.razor
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-dark navbar-expand-md sticky-top navbar-shrink py-3" id="mainNav">
     <div class="container">
         <NavLink Match="NavLinkMatch.All" class="navbar-brand d-flex flex-column align-items-center" href="/"><span class="bs-icon-lg d-flex justify-content-center align-items-center me-2 bs-icon" style="color: rgb(255,255,255);"><img class="img-fluid" src="assets/img/Logos/Krone.png">&nbsp;SAMT</span><small style="padding-top: 5px;">Siegener Anime und Manga Treff</small></NavLink><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navcol-1">
+        <div class="collapse navbar-collapse text-center" id="navcol-1">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item"><NavLink ActiveClass="active" Match="NavLinkMatch.All" class="nav-link" href="/">Start</NavLink></li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="whenwhere">Wann & Wo?</NavLink></li>
