Try to add more info to script

--- a/SAMT-Website/Pages/_Layout.cshtml
+++ b/SAMT-Website/Pages/_Layout.cshtml
@@ -79,6 +79,6 @@
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/js/smart-forms.min.js"></script>
-<script src="assets/js/bold-and-dark.js"></script>
+<script src="assets/js/bold-and-dark.js" async="true" language="javascript" type="text/javascript" crossorigin="anonymous"></script>
 </body>
 </html>
