--- a/SAMT-Website/Pages/Whenwhere.razor
+++ b/SAMT-Website/Pages/Whenwhere.razor
@@ -4,6 +4,7 @@
 @page "/wann"
 @page "/wo"
 @page "/parken"
+@page "/anfahrt"
 
 @using Database.Models
 @using Microsoft.EntityFrameworkCore
@@ -65,7 +66,7 @@
                             <i class="icon ion-android-car" style="font-size: 50px;"></i>
                             <p class="fw-bold text-secondary card-text mb-2" style="margin-top: -8px;">Mit dem Auto</p>
                             <h5 class="fw-bold card-title mb-3">Schnell und bequem, jedoch leider meist mit Parkkosten</h5>
-                            <p class="text-muted card-text mb-4">In Siegen gibt es viele Parkmöglichkeiten, kosten meist jedoch leider etwas Geld.<br><br><strong>Parken direkt an der BlueBox-Siegen ist aufgrund sehr weniger Parkplätze dem Team, den Austellern und Besuchern mit Handicap vorbehalten!</strong><br><br>Wir haben für euch einen Parkplatz-Guide zusammengestellt mit einer <strong>kostenlosen,</strong> und zwei unterschiedlich kostenpflichtigen Parkmöglichkeit, sowie den Fußweg zum Veranstaltungsort und sonstige Hinweisen.</p><a class="btn btn-secondary btn-sm" role="button" target="_blank" href="https://drive.google.com/file/d/1UHKbGnG9mFTlH4-kFoEzpbSY9b8hDThn/view?usp=sharing">Parkplatz-Guide</a>
+                            <p class="text-muted card-text mb-4">In Siegen gibt es viele Parkmöglichkeiten, kosten meist jedoch leider etwas Geld.<br><br><strong>Parken direkt an der BlueBox-Siegen ist aufgrund sehr weniger Parkplätze dem Team, den Austellern, Künstlern, Händlern und Besuchern mit Handicap vorbehalten!</strong><br><br>Wir haben für euch einen Parkplatz-Guide zusammengestellt mit einer <strong>kostenlosen,</strong> und zwei unterschiedlich kostenpflichtigen Parkmöglichkeit, sowie den Fußweg zum Veranstaltungsort und sonstige Hinweisen.</p><a class="btn btn-secondary btn-sm" role="button" target="_blank" href="https://drive.google.com/file/d/1UHKbGnG9mFTlH4-kFoEzpbSY9b8hDThn/view?usp=sharing">Parkplatz-Guide</a>
                         </div>
                     </div>
                 </div>
