--- a/SAMT-Website/Pages/_Layout.cshtml
+++ b/SAMT-Website/Pages/_Layout.cshtml
@@ -51,6 +51,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/fonts/material-icons.min.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
 </head>
