Added missing javascript

--- a/SAMT-Website/Pages/_Layout.cshtml
+++ b/SAMT-Website/Pages/_Layout.cshtml
@@ -80,6 +80,7 @@
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/js/smart-forms.min.js"></script>
+<script src="assets/js/bs-init.js"></script>
 <script src="assets/js/bold-and-dark.js"></script>
 </body>
 </html>
