--- a/SAMT-Website/Pages/Pricing.razor
+++ b/SAMT-Website/Pages/Pricing.razor
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="row g-0 row-cols-1 row-cols-md-2 row-cols-xl-3 d-flex align-items-md-center align-items-xl-center">
-            <div class="col offset-xl-2 mb-4">
+            <div class="col offset-xl-4 mb-4">
                 <div class="card bg-dark border-dark">
                     <div class="card-body p-4">
                         <div class="d-flex justify-content-between">
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col mb-4">
+            @*<div class="col mb-4">
                 <div class="card text-white bg-primary">
                     <div class="card-body p-4">
                         <div class="d-flex justify-content-between">
@@ -105,7 +105,7 @@
                         </div><button class="btn btn-primary d-block w-100 bg-semi-white" type="button">Verkauf an Tageskasse</button>
                     </div>
                 </div>
-            </div>
+            </div>*@
         </div>
     </div><!-- End: Pricing Duo -->
 </section>
