Added bring and buy information Updated database context

--- a/SAMT-Website/Pages/Contact.razor
+++ b/SAMT-Website/Pages/Contact.razor
@@ -71,7 +71,7 @@
                             </svg>
                         </div>
                         <div class="px-2">
-                            <h6 class="fw-bold mb-0">Phone</h6>
+                            <h6 class="fw-bold mb-0">Telefon</h6>
                             <p class="text-muted mb-0">+49 151 10268749</p>
                         </div>
                     </div>
