--- a/SAMT-Website/Pages/_Layout.cshtml
+++ b/SAMT-Website/Pages/_Layout.cshtml
@@ -52,6 +52,9 @@
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/fonts/material-icons.min.css">
     <link rel="stylesheet" href="assets/css/animate.min.css">
+    
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
 </head>
@@ -82,5 +85,7 @@
 <script src="assets/js/smart-forms.min.js"></script>
 <script src="assets/js/bs-init.js"></script>
 <script src="assets/js/bold-and-dark.js"></script>
+
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 </html>
