--- a/SAMT-Website/Shared/Footer.razor
+++ b/SAMT-Website/Shared/Footer.razor
@@ -24,7 +24,7 @@
         </div>
         <hr>
         <div class="text-muted d-flex justify-content-between align-items-center pt-3">
-            <p class="mb-0">Copyright © 2022 Jugend mal anders e.V.</p>
+            <p class="mb-0">Copyright © @DateTime.Now.Year Jugend mal anders e.V.</p>
             <ul class="list-inline mb-0">
                 <li class="list-inline-item">
                     <a href="https://www.facebook.com/SAMTSiegen" rel="external" target="_blank">
