Added bring and buy to nav

--- a/SAMT-Website/Pages/BringAndBuy.razor
+++ b/SAMT-Website/Pages/BringAndBuy.razor
@@ -1,4 +1,7 @@
-﻿@using Microsoft.EntityFrameworkCore
+﻿@page "/bnb"
+@page "/bringandbuy"
+
+@using Microsoft.EntityFrameworkCore
 @using Database.Models
 @inject ILocalStorageService localStorage
 @inject IDbContextFactory<samt_websiteContext> DbFactory
