Added missing state check

--- a/SAMT-Website/Pages/BringAndBuy.razor
+++ b/SAMT-Website/Pages/BringAndBuy.razor
@@ -67,6 +67,7 @@
         {
             generateButtonDisabled = true;
             number = await localStorage.GetItemAsStringAsync(currentEventId);
+            StateHasChanged();
         }
     }
 
