--- a/SAMT-Website/Pages/BringAndBuy.razor
+++ b/SAMT-Website/Pages/BringAndBuy.razor
@@ -66,7 +66,7 @@
         if (await localStorage.ContainKeyAsync(currentEventId))
         {
             generateButtonDisabled = true;
-            number = await localStorage.GetItemAsStringAsync(currentEventId);
+            number = await localStorage.GetItemAsync<string>(currentEventId);
             StateHasChanged();
         }
     }
