--- a/SAMT-Website/Pages/BringAndBuy.razor
+++ b/SAMT-Website/Pages/BringAndBuy.razor
@@ -73,7 +73,7 @@
 
     private async void GetNumber()
     {
-        number = !context.EventsBringAndBuys.Any() ? "1" : (context.EventsBringAndBuys.OrderByDescending(x => x.FkEventId).Last(x => x.FkEventId == Convert.ToInt32(currentEventId)).Number + 1).ToString();
+        number = !context.EventsBringAndBuys.Any() ? "1" : (context.EventsBringAndBuys.OrderBy(x => x.FkEventId).Last(x => x.FkEventId == Convert.ToInt32(currentEventId)).Number + 1).ToString();
         generateButtonDisabled = true;
         StateHasChanged();
 
