Added information about accessibility at our location

--- a/SAMT-Website/Pages/Whenwhere.razor
+++ b/SAMT-Website/Pages/Whenwhere.razor
@@ -37,9 +37,8 @@
             </div>
         </div>
     </div><!-- End: Hero Clean Reverse -->
-</header><!-- Start: Features -->
+</header><!-- Start: Anfahrt -->
 <section>
-    <!-- Start: Features Cards -->
     <div class="container py-5">
         <div class="row mb-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
@@ -66,11 +65,23 @@
                             <i class="icon ion-android-car" style="font-size: 50px;"></i>
                             <p class="fw-bold text-secondary card-text mb-2" style="margin-top: -8px;">Mit dem Auto</p>
                             <h5 class="fw-bold card-title mb-3">Schnell und bequem, jedoch leider meist mit Parkkosten</h5>
-                            <p class="text-muted card-text mb-4">In Siegen gibt es viele Parkmöglichkeiten, kosten meist jedoch leider etwas Geld.<br><br><strong>Parken direkt an der BlueBox-Siegen ist aufgrund sehr weniger Parkplätze dem Team, den Austellern, Künstlern, Händlern und Besuchern mit Handicap vorbehalten!</strong><br><br>Wir haben für euch einen Parkplatz-Guide zusammengestellt mit einer <strong>kostenlosen,</strong> und zwei unterschiedlich kostenpflichtigen Parkmöglichkeit, sowie den Fußweg zum Veranstaltungsort und sonstige Hinweisen.</p><a class="btn btn-secondary btn-sm" role="button" target="_blank" href="https://drive.google.com/file/d/1tJi5paLIbfBSOnRY3GPtHv0cgIuTklUh/view?usp=sharing">Parkplatz-Guide</a>
+                            <p class="text-muted card-text mb-4">In Siegen gibt es viele Parkmöglichkeiten, kosten meist jedoch leider etwas Geld.<br><br><strong>Parken direkt an der BlueBox-Siegen ist aufgrund sehr weniger Parkplätze dem Team, den Austellern, Künstlern, Händlern und Besuchern mit Handicap vorbehalten!</strong><br><br>Wir haben für euch einen Parkplatz-Guide zusammengestellt mit einer <strong>kostenlosen,</strong> und zwei unterschiedlich kostenpflichtigen Parkmöglichkeit, sowie den Fußweg zum Veranstaltungsort und sonstige Hinweisen.</p><a class="btn btn-secondary btn-sm" role="button" target="_blank" href="https://drive.google.com/file/d/1UHKbGnG9mFTlH4-kFoEzpbSY9b8hDThn/view?usp=sharing">Parkplatz-Guide</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div><!-- End: Features Cards -->
-</section><!-- End: Features -->
+    </div>
+</section><!-- End: Anfahrt -->
+<!-- Start: Barrierefreiheit -->
+<section>
+    <div class="container py-5">
+        <div class="row mb-5">
+            <div class="col-md-8 col-xl-6 text-center mx-auto">
+                <p class="fw-bold text-success mb-2">Barrierefreiheit</p>
+                <h2 class="fw-bold">Wir sind Barrierefrei!</h2>
+                <p class="text-muted w-lg-50">Du hast ein Handicap und bist dir nicht sicher, ob du ohne Probleme an unserer Convention teilnehmen kannst? Keine Sorge!<br>Unser Gelände hat zwar mehrere Etagen, ist aber über einen <strong>Aufzug</strong> an der Seite des Gebäudes barrierefrei zu erreichen.<br><br>Da der Aufzug jedoch einen <strong>Schlüssel</strong> benötigt, wende dich bitte bei deiner Ankunft an jemanden am Eingang, wir geben dir den Schlüssel und zeigen dir alle Details zur sicheren Benutzung, falls du dich nicht schon auskennst.<br><br><strong>Wo kann ich parken?</strong><br>Besucher mit Handicap können selbstverständlich direkt vor dem Gebäude parken.</p>
+            </div>
+        </div>
+    </div>
+</section><!-- End: Barrierefreiheit -->
