Added script to automatically reconnect after site update

--- a/SAMT-Website/Pages/_Layout.cshtml
+++ b/SAMT-Website/Pages/_Layout.cshtml
@@ -69,7 +69,15 @@
         <a class="dismiss">🗙</a>
     </div>
 
-<script src="_framework/blazor.server.js"></script>
+    <script src="_framework/blazor.server.js" autostart="false"></script>
+
+<script>
+    Blazor.start().then(() => {
+        Blazor.defaultReconnectionHandler._reconnectCallback = function (d) {
+            document.location.reload();
+        }
+    });
+</script>
 
 <script>
         navigatorLanguages = function () {
