--- a/SAMT-Website/Pages/Pricing.razor
+++ b/SAMT-Website/Pages/Pricing.razor
@@ -5,8 +5,8 @@
 
 <PageTitle>Preise</PageTitle>
 
-<section class="py-5">
-    <!-- Start: Pricing Duo -->
+<!-- Start: Preise -->
+<section>
     <div class="container py-5">
         <div class="row mb-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
@@ -46,66 +46,47 @@
                                         <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg text-primary">
                                             <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
                                         </svg>
+                                    </span><span>Workshops</span>
+                                </li>
+                                <li class="d-flex mb-2">
+                                    <span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg text-primary">
+                                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
+                                        </svg>
                                     </span><span>Und alles andere :D</span>
                                 </li>
                             </ul>
-                        </div><button class="btn btn-primary d-block w-100" type="button">Verkauf an Tageskasse</button>
+                        </div><button class="btn btn-primary d-block w-100" type="button">Verkauf vor Ort an der Tageskasse</button>
                     </div>
                 </div>
             </div>
-            @*<div class="col mb-4">
-                <div class="card text-white bg-primary">
-                    <div class="card-body p-4">
-                        <div class="d-flex justify-content-between">
-                            <div>
-                                <h3 class="fw-bold text-white mb-0">Armbändchen</h3>
-                                <p>Eintritt für das ganze Jahr</p>
-                                <h4 class="display-4 fw-bold text-white">4 €</h4>
+        </div>
+    </div>
+</section><!-- End: Preise -->
+<!-- Start: FAQ Preise -->
+<section>
+    <div class="container py-5">
+        <div class="row mb-5">
+            <div class="col-md-8 col-xl-6 text-center mx-auto">
+                <div class="accordion" role="tablist" id="accordion-2">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" role="tab"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-1" aria-expanded="true" aria-controls="accordion-2 .item-1">Wie viele Tickets gibt es?</button></h2>
+                        <div class="accordion-collapse collapse show item-1" role="tabpanel" data-bs-parent="#accordion-2">
+                            <div class="accordion-body">
+                                <p class="mb-0">Du brauchst dir keine Sorgen machen, dass du nicht rein kommst!<br>Da wir eine recht kleine Convention sind gibt es bei uns keine begrenzte Ticketanzahl. Also egal ob früh oder spät, du kommst auf jeden Fall rein :D</p>
                             </div>
-                            <div><span class="badge rounded-pill bg-primary text-uppercase bg-semi-white">Best Value</span></div>
                         </div>
-                        <div>
-                            <ul class="list-unstyled">
-                                <li class="d-flex mb-2">
-                                    <span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon bs-icon-xs me-2">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg text-primary">
-                                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
-                                        </svg>
-                                    </span><span>Alles wie beim normalen Eintritt</span>
-                                </li>
-                                <li class="d-flex mb-2">
-                                    <span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon bs-icon-xs me-2">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg text-primary">
-                                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
-                                        </svg>
-                                    </span><span>Unser wunderschönes SAMT Festivalband</span>
-                                </li>
-                                <li class="d-flex mb-2">
-                                    <span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon bs-icon-xs me-2">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg text-primary">
-                                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
-                                        </svg>
-                                    </span><span>Du zeigst uns deine Unterstützung</span>
-                                </li>
-                                <li class="d-flex mb-2">
-                                    <span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon bs-icon-xs me-2">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg text-primary">
-                                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
-                                        </svg>
-                                    </span><span></span>Vielen Dank!
-                                </li>
-                                <li class="d-flex mb-2">
-                                    <span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon bs-icon-xs me-2">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg text-primary">
-                                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
-                                        </svg>
-                                    </span><span></span>Ihr seid toll
-                                </li>
-                            </ul>
-                        </div><button class="btn btn-primary d-block w-100 bg-semi-white" type="button">Verkauf an Tageskasse</button>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-2" aria-expanded="false" aria-controls="accordion-2 .item-2">Warum so günstig?</button></h2>
+                        <div class="accordion-collapse collapse item-2" role="tabpanel" data-bs-parent="#accordion-2">
+                            <div class="accordion-body">
+                                <p class="mb-0"><strong>Wir wollen mit dem SAMT keinen Gewinn machen.</strong><br>Ursprünglich gestartet sind wir als kleines, lokales und gemütliches Treffen unter Gleichgesinnten. Wir mögen zwar stetig wachsen und auch unser Angebot erweitern, das ist jedoch noch kein Grund für uns den Ticketpreis anzuheben. Unser Ziel ist es ein Con-Erlebnis, wenn auch klein, für alle zu schaffen, auch die die sich vielleicht keine AnimagiC oder Dokomi leisten können.<br>Alles Geld was wir mit dem SAMT verdienen wird auf wieder für das SAMT/SAMT XL ausgegeben.<br><br>Zusätzlich steht hinter uns der gemeinnütziger Verein "Jugend mal anders e.V."</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>*@
+            </div>
         </div>
-    </div><!-- End: Pricing Duo -->
-</section>
+    </div>
+</section><!-- End: FAQ Preise -->
