--- a/SAMT-Website/Pages/Pricing.razor
+++ b/SAMT-Website/Pages/Pricing.razor
@@ -85,6 +85,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-3" aria-expanded="false" aria-controls="accordion-2 .item-3">Warum werden die Tickets nicht online verkauft?</button></h2>
+                        <div class="accordion-collapse collapse item-3" role="tabpanel" data-bs-parent="#accordion-2">
+                            <div class="accordion-body">
+                                <p class="mb-0">Unser Ticketpreis beträgt gerade einmal 99 Cent, das online zu verkaufen würde mehr kosten durch die ganzen Gebühren der Zahlungsanbieter als das Ticket überhaupt kostet. Bedeutet im Endeffekt würden wir damit Geld verlieren. Daher haben wir uns dazu entschieden den Ticketverkauf vor Ort zu machen.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
