--- a/SAMT-Website/Pages/Pricing.razor
+++ b/SAMT-Website/Pages/Pricing.razor
@@ -73,7 +73,7 @@
                         <h2 class="accordion-header" role="tab"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-1" aria-expanded="true" aria-controls="accordion-2 .item-1">Wie viele Tickets gibt es?</button></h2>
                         <div class="accordion-collapse collapse show item-1" role="tabpanel" data-bs-parent="#accordion-2">
                             <div class="accordion-body">
-                                <p class="mb-0">Du brauchst dir keine Sorgen machen, dass du nicht rein kommst!<br>Da wir eine recht kleine Convention sind gibt es bei uns keine begrenzte Ticketanzahl. Also egal ob früh oder spät, du kommst auf jeden Fall rein :D</p>
+                                <p class="mb-0">Du brauchst dir keine Sorgen machen, dass du nicht rein kommst!<br>Da wir eine recht kleine Convention sind gibt es bei uns keine Ticketbegrenzung. Also egal ob früh oder spät, du kommst auf jeden Fall rein :D</p>
                             </div>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                         <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-2" aria-expanded="false" aria-controls="accordion-2 .item-2">Warum so günstig?</button></h2>
                         <div class="accordion-collapse collapse item-2" role="tabpanel" data-bs-parent="#accordion-2">
                             <div class="accordion-body">
-                                <p class="mb-0"><strong>Wir wollen mit dem SAMT keinen Gewinn machen.</strong><br>Ursprünglich gestartet sind wir als kleines, lokales und gemütliches Treffen unter Gleichgesinnten. Wir mögen zwar stetig wachsen und auch unser Angebot erweitern, das ist jedoch noch kein Grund für uns den Ticketpreis anzuheben. Unser Ziel ist es ein Con-Erlebnis, wenn auch klein, für alle zu schaffen, auch die die sich vielleicht keine AnimagiC oder Dokomi leisten können.<br>Alles Geld was wir mit dem SAMT verdienen wird auf wieder für das SAMT/SAMT XL ausgegeben.<br><br>Zusätzlich steht hinter uns der gemeinnütziger Verein "Jugend mal anders e.V."</p>
+                                <p class="mb-0"><strong>Wir wollen mit dem SAMT keinen Gewinn erzielen.</strong><br><br>Wir sind als kleines, lokales und gemütliches Treffen von Gleichgesinnten gestartet. Auch wenn wir stetig wachsen und unser Angebot erweitern, ist das für uns kein Grund die Eintrittspreise zu erhöhen. Unser Ziel ist es, ein, wenn auch kleines, Conerlebnis für alle zu schaffen, auch für die, die sich vielleicht keine AnimagiC oder Dokomi leisten können.<br><br>Alles Geld was wir mit dem SAMT einnehmen wird wieder in das SAMT bzw. SAMT XL investiert.<br><br>Außerdem steht hinter uns der gemeinnützige Verein "Jugend mal anders e.V.".</p>
                             </div>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                         <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-2 .item-3" aria-expanded="false" aria-controls="accordion-2 .item-3">Warum werden die Tickets nicht online verkauft?</button></h2>
                         <div class="accordion-collapse collapse item-3" role="tabpanel" data-bs-parent="#accordion-2">
                             <div class="accordion-body">
-                                <p class="mb-0">Unser Ticketpreis beträgt gerade einmal 99 Cent, das online zu verkaufen würde mehr kosten durch die ganzen Gebühren der Zahlungsanbieter als das Ticket überhaupt kostet. Bedeutet im Endeffekt würden wir damit Geld verlieren. Daher haben wir uns dazu entschieden den Ticketverkauf vor Ort zu machen.</p>
+                                <p class="mb-0">Unser Ticketpreis beträgt nur 99 Cent, das online zu verkaufen würde durch die ganzen Gebühren der Zahlungsanbieter mehr kosten, als das Ticket überhaupt kostet. Unter dem Strich würden wir also Geld verlieren. Deshalb haben wir uns entschieden, die Tickets vor Ort zu verkaufen.</p>
                             </div>
                         </div>
                     </div>
