Rebrand zu "Treffen" anstatt "Treff"

--- a/SAMT-Website/Pages/BringAndBuy.razor
+++ b/SAMT-Website/Pages/BringAndBuy.razor
@@ -6,6 +6,8 @@
 @inject ILocalStorageService localStorage
 @inject IDbContextFactory<samt_websiteContext> DbFactory
 
+<PageTitle>Bring & Buy Infos</PageTitle>
+
 <!-- Start: Bring and Buy Info -->
 <section class="py-5">
     <div class="container py-5">
