--- a/SAMT-Website/Shared/Footer.razor
+++ b/SAMT-Website/Shared/Footer.razor
@@ -19,7 +19,7 @@
             <!-- Start: Social Icons -->
             <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last item social">
                 <div class="fw-bold d-flex align-items-center mb-2"><span class="bs-icon-sm d-flex justify-content-center align-items-center bs-icon me-2"><img class="img-fluid" src="assets/img/Logos/Krone.png"></span><span>SAMT</span></div>
-                <p class="text-muted copyright">Siegener Anime und Manga Treff<br>Für euch, auf eine geile Zeit &lt;3</p>
+                <p class="text-muted copyright">Siegener Anime und Manga Treffen<br>Für euch, auf eine geile Zeit &lt;3</p>
             </div><!-- End: Social Icons -->
         </div>
         <hr>
