Add program and competition site

--- a/SAMT-Website/Shared/NavMenu.razor
+++ b/SAMT-Website/Shared/NavMenu.razor
@@ -5,6 +5,12 @@
         <div class="collapse navbar-collapse text-center" id="navcol-1">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item"><NavLink ActiveClass="active" Match="NavLinkMatch.All" class="nav-link" href="/">Start</NavLink></li>
+                <li class="nav-item dropdown show">
+                    <a class="dropdown-toggle nav-link" aria-expanded="true" data-bs-toggle="dropdown">Programm</a>
+                    <div class="dropdown-menu show" data-bs-popper="none">
+                        <NavLink class="dropdown-item" href="wettbewerbe">Wettbewerbe</NavLink>
+                    </div>
+                </li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="anfahrt">Wann & Wo?</NavLink></li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="tickets">Tickets & Preise</NavLink></li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="bnb">Bring & Buy</NavLink></li>
