--- a/SAMT-Website/Shared/NavMenu.razor
+++ b/SAMT-Website/Shared/NavMenu.razor
@@ -7,7 +7,7 @@
                 <li class="nav-item"><NavLink ActiveClass="active" Match="NavLinkMatch.All" class="nav-link" href="/">Start</NavLink></li>
                 <li class="nav-item dropdown show">
                     <a class="dropdown-toggle nav-link" aria-expanded="true" data-bs-toggle="dropdown">Programm</a>
-                    <div class="dropdown-menu show" data-bs-popper="none">
+                    <div class="dropdown-menu" data-bs-popper="none">
                         <NavLink class="dropdown-item" href="wettbewerbe">Wettbewerbe</NavLink>
                     </div>
                 </li>
