Update cosplay contest form link

--- a/SAMT-Website/Pages/Competition.razor
+++ b/SAMT-Website/Pages/Competition.razor
@@ -20,7 +20,7 @@
                     <p class="text-muted mb-4">Hier kannst du unsere Cosplaywettbewerb-Regeln einsehen und dich für den Cosplaywettbewerb anmelden.</p>
                     <div class="row">
                         <div class="col-auto"><a class="btn btn-danger shadow" role="button" href="https://drive.google.com/file/d/1i8AUm0TSBx6efNvsee9AlOIs1YYyRurl/view?usp=sharing" target="_blank">Regeln</a></div>
-                        <div class="col"><a class="btn btn-primary shadow" role="button" href="https://forms.gle/ZKiiBVe3wpPZHxtr7" target="_blank">Anmeldung</a></div>
+                        <div class="col"><a class="btn btn-primary shadow" role="button" href="https://forms.gle/deGAYgBZBMRkF8W76" target="_blank">Anmeldung</a></div>
                     </div>
                 </div>
             </div>
