Update for barrier free

--- a/SAMT-Website/Pages/Whenwhere.razor
+++ b/SAMT-Website/Pages/Whenwhere.razor
@@ -86,6 +86,7 @@
         <div class="row mb-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
                 <p class="fw-bold text-success mb-2">Barrierefreiheit</p>
+                <div class="alert alert-danger" role="alert"><span><strong>Der Aufzug ist leider außer Betrieb!</strong><br>(Die Location arbeitet daran)</span></div>
                 <h2 class="fw-bold">Wir sind Barrierefrei!</h2>
                 <p class="text-muted w-lg-50">Du hast ein Handicap und bist dir nicht sicher, ob du ohne Probleme an unserer Convention teilnehmen kannst? Keine Sorge!<br>Unser Gelände hat zwar mehrere Etagen, ist aber über einen <strong>Aufzug</strong> an der Seite des Gebäudes barrierefrei zu erreichen.<br><br>Da der Aufzug jedoch einen <strong>Schlüssel</strong> benötigt, wende dich bitte bei deiner Ankunft an jemanden am Eingang, wir geben dir den Schlüssel und zeigen dir alle Details zur sicheren Benutzung, falls du dich nicht schon auskennst.<br><br><strong>Wo kann ich parken?</strong><br>Besucher mit Handicap können selbstverständlich direkt vor dem Gebäude parken.</p>
             </div>
