--- a/SAMT-Website/Shared/NavMenu.razor
+++ b/SAMT-Website/Shared/NavMenu.razor
@@ -8,6 +8,7 @@
                 <li class="nav-item dropdown show">
                     <a class="dropdown-toggle nav-link" aria-expanded="true" data-bs-toggle="dropdown">Programm</a>
                     <div class="dropdown-menu" data-bs-popper="none">
+                        <NavLink class="dropdown-item" href="flyer">Flyer</NavLink>
                         <NavLink class="dropdown-item" href="wettbewerbe">Wettbewerbe</NavLink>
                     </div>
                 </li>
