--- a/SAMT-Website/Pages/Flyer.razor
+++ b/SAMT-Website/Pages/Flyer.razor
@@ -1,4 +1,8 @@
-﻿<!-- Start: Services -->
+﻿@page "/flyer"
+@page "/programm"
+@page "/program"
+
+<!-- Start: Services -->
 <section class="py-5">
     <!-- Start: Features Cards -->
     <div class="container py-5">
