--- a/SAMT-Website/Pages/Flyer.razor
+++ b/SAMT-Website/Pages/Flyer.razor
@@ -9,7 +9,7 @@
         <div class="row mb-4 mb-lg-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
                 <p class="fw-bold text-success mb-2">Flyer</p>
-                <h3 class="fw-bold">Unser Programm und Künstler</h3><a class="btn btn-primary" role="button" target="_blank" href="Sommer-SAMT-2023-Flyer.pdf">Download</a>
+                <h3 class="fw-bold">Unser Programm und Künstler</h3><a class="btn btn-primary" role="button" target="_blank" href="Sommer-SAMT-2023-Flyer.pdf">Download PDF</a>
             </div>
         </div>
         <div class="row justify-content-center align-items-center">
