Removed cosplay contest from competition site

--- a/SAMT-Website/Pages/Competition.razor
+++ b/SAMT-Website/Pages/Competition.razor
@@ -12,7 +12,7 @@
                 <h3 class="fw-bold">Unsere Wettbewerbe</h3>
             </div>
         </div>
-        <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
+        @* <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
             <div class="col mb-5"><img class="rounded img-fluid shadow" src="assets/img/Eventbilder/Franco/DSC00317.jpg"></div>
             <div class="col d-md-flex align-items-md-end align-items-lg-center mb-5">
                 <div>
@@ -24,7 +24,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> *@
         <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
             <div class="col order-md-last mb-5"><img class="rounded img-fluid shadow" src="assets/img/Eventbilder/Mapel_Chan/IMG_20220919_151239_937.jpg"></div>
             <div class="col d-md-flex align-items-md-end align-items-lg-center mb-5">
