--- a/SAMT-Website/Shared/NavMenu.razor
+++ b/SAMT-Website/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="anfahrt">Wann & Wo?</NavLink></li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="tickets">Tickets & Preise</NavLink></li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="bnb">Bring & Buy</NavLink></li>
-                <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="https://forms.gle/uo6cTPWQ6jHXJ19w7" target="_blank" rel="external">Ausstellerbewerbung</NavLink></li>
+                @* <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="https://forms.gle/uo6cTPWQ6jHXJ19w7" target="_blank" rel="external">Ausstellerbewerbung</NavLink></li> *@
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="kontakt">Kontakt</NavLink></li>
             </ul><a class="btn btn-primary shadow" role="button" href="https://discord.gg/QHC3UE9" target="_blank" rel="external" style="margin-right: 15px;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-discord" style="font-size: 25px;margin-top: -3px;margin-right: 3px;">
