--- a/SAMT-Website/Pages/Whenwhere.razor
+++ b/SAMT-Website/Pages/Whenwhere.razor
@@ -13,7 +13,7 @@
 
 @{
     var context = DbFactory.CreateDbContext();
-    var samt = context.Events.OrderBy(x => x.Date).Include(x => x.FkLocation).ToList().SkipWhile(x => x.Date <= DateTime.Now).First();
+    var samt = context.Events.OrderBy(x => x.Date).Include(x => x.FkLocation).ToList().SkipWhile(x => x.Date <= DateTime.Now).FirstOrDefault();
 }
 
 <PageTitle>Wann & Wo</PageTitle>
@@ -25,15 +25,27 @@
             <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-end mb-4">
                 <div style="max-width: 450px;min-width: 422px;">
                     <p class="fw-bold text-success mb-2">Wann?</p>
-                    <h2 class="fw-bold">@samt.Date.ToString("dd.MM.yyyy")</h2>
-                    <p class="my-3"><strong>Öffnungszeiten</strong><br>11:30 Uhr - 21:00 Uhr</p>
-                    <p class="fw-bold text-success mb-2">Wo?</p>
-                    <h2 class="fw-bold">@samt.FkLocation.Name</h2>
-                    <p class="my-3">@samt.FkLocation.Street @samt.FkLocation.Number, @samt.FkLocation.Plz @samt.FkLocation.City</p>
+                    @if (samt == null || samt == default)
+                    {
+                        <h2 class="fw-bold">Kündigen wir bald an :3</h2>
+                    }
+                    else
+                    {
+                        <h2 class="fw-bold">@samt.Date.ToString("dd.MM.yyyy")</h2>
+                        <p class="my-3"><strong>Öffnungszeiten</strong><br>11:30 Uhr - 21:00 Uhr</p>
+                        <p class="fw-bold text-success mb-2">Wo?</p>
+                        <h2 class="fw-bold">@samt.FkLocation.Name</h2>
+                        <p class="my-3">@samt.FkLocation.Street @samt.FkLocation.Number, @samt.FkLocation.Plz @samt.FkLocation.City</p>
+                    }
                 </div>
             </div>
             <div class="col-md-6 mb-4">
-                <div class="p-5 mx-lg-5" style="background: url(&quot;assets/img/blob.svg&quot;) center / contain no-repeat;"><iframe src="@samt.FkLocation.MapsLink" class="rounded img-fluid shadow w-100 fit-cover" style="border:0;min-height: 300px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+                <div class="p-5 mx-lg-5" style="background: url(&quot;assets/img/blob.svg&quot;) center / contain no-repeat;">
+                    @if (samt != null && samt != default)
+                    {
+                        <iframe src="@samt.FkLocation.MapsLink" class="rounded img-fluid shadow w-100 fit-cover" style="border:0;min-height: 300px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    }
+                </div>
             </div>
         </div>
     </div><!-- End: Hero Clean Reverse -->
@@ -51,7 +63,8 @@
             <div class="row row-cols-1 row-cols-md-2 d-flex justify-content-center">
                 <div class="col mb-4">
                     <div class="card bg-primary-light">
-                        <div class="card-body text-center px-4 py-5 px-md-5"><i class="material-icons" style="font-size: 50px;width: auto;height: auto;">train</i>
+                        <div class="card-body text-center px-4 py-5 px-md-5">
+                            <i class="material-icons" style="font-size: 50px;width: auto;height: auto;">train</i>
                             <p class="fw-bold text-primary card-text mb-2">Mit dem Zug</p>
                             <h5 class="fw-bold card-title mb-3">Umweltfreundlich und keine Parkplatzsuche mit dem Zug</h5>
                             <p class="text-muted card-text mb-4">Fahr mit dem Zug bis <strong>Siegen HBF</strong>.<br>Nutze hierfür am besten Apps wie z.B. den&nbsp;<a href="https://www.bahn.de/service/mobile/db-navigator" target="_blank">DB Navigator</a>.<br><br><strong>Als kurze Übersicht aus Richtung:</strong></p>
