--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -21,7 +21,7 @@
         <div class="row pt-5">
             <div class="col-md-8 col-xl-6 text-center text-md-start mx-auto" style="margin-top: -48px;">
                 <div class="text-center">
-                    @if (samt == null || samt == default)
+                    @if (samt is null)
                     {
                         <img class="img-fluid" src="https://i.imgur.com/D9jeMkR.png" width="300" alt="SAMT Logo">
                         <p class="mb-4" style="font-size: 1.6rem;">Coming soon... <br><span class="text-success"><strong>QwQ</strong></span><br> UwU</p>
